# fcad-chennes

.github/workflows/: sub_buildUbuntu2004.yml  sub_buildUbuntu2204.yml
.github/workflows/actions/runCPPTests/: action.yml
.github/workflows/actions/runCPPTests/runAllTests/: action.yml
cMake/: FindCoin3D.cmake
src/App/: Application.cpp  Document.cpp  Metadata.cpp
src/Base/: CMakeLists.txt  Console.cpp  Console.h  Metadata.cpp  Metadata.h  MetadataReader.cpp  MetadataReader.h  ThemeManager.cpp
src/Gui/: Application.cpp  CMakeLists.txt  CommandView.cpp  ThemeManager.h  Workbench.cpp
src/Mod/AddonManager/: AddonManager.py  AddonManagerRepo.py  CMakeLists.txt  NetworkManager.py  TestAddonManagerApp.py  TestAddonManagerGui.py  addonmanager_addon_source_git.py  addonmanager_dependency_installer.py  addonmanager_devmode.py  addonmanager_devmode_metadata_checker.py  addonmanager_devmode_person_editor.py  addonmanager_firstrun.py  addonmanager_freecad_interface.py  addonmanager_git.py  addonmanager_icon_source.py  addonmanager_installer.py  addonmanager_installer_gui.py  addonmanager_macro.py  addonmanager_macro_source_git.py  addonmanager_macro_source_wiki.py  addonmanager_source.py  addonmanager_source_git.py  addonmanager_source_gitmacro.py  addonmanager_source_local_cache.py  addonmanager_source_wiki.py  addonmanager_update_all_gui.py  addonmanager_utilities.py  addonmanager_workers.py  addonmanager_workers_installation.py  addonmanager_workers_startup.py  change_branch.py  package_details.py  package_list.py
src/Mod/AddonManager/AddonManagerTest/app/: test_addon_source_git.py  test_git.py  test_installer.py  test_macro.py  test_macro_parser.py  test_macro_source_git.py  test_macro_source_wiki.py  test_source.py  test_source_git.py  test_source_local_cache.py  test_uninstaller.py  test_utilities.py
src/Mod/AddonManager/AddonManagerTest/data/: depends_on_all_workbenches.xml
src/Mod/AddonManager/AddonManagerTest/gui/: test_icon_source.py  test_installer_gui.py
src/Mod/AddonManager/Resources/translations/: AddonManager_uk.ts
src/Mod/OpenSCAD/: OpenSCADFeatures.py  importCSG.py
src/Mod/Start/StartPage/: CMakeLists.txt  LoadFile.py  PinRecent.py  RemoveRecent.py  StartPage.css  StartPage.html  StartPage.js  StartPage.py  TranslationTexts.py  UnpinRecent.py
src/Mod/Test/: Metadata.py
src/Mod/Web/Gui/: BrowserView.cpp
